[package]
name = "ibe"
version = "0.1.2"
description = "Identity Based Encryption schemes on the BLS12-381 pairing-friendly elliptic curve"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/wassasin/ibe"
keywords = ["ibe", "encryption", "ecc", "no_std"]
categories = ["cryptography", "no-std"]

[dependencies]
rand = "0.7"
tiny-keccak = "1.5.0"
arrayref = "0.3.5"
# bls12_381 = { git = "https://github.com/wassasin/bls12_381", branch = "gt-serialisation" }

[dependencies.subtle]
version = "2.2.1"
default-features = false

[dependencies.byteorder]
version = "1"
default-features = false

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "main"
harness = false