[package]
name = "ibe"
version = "0.1.3"
description = "Identity Based Encryption schemes on the BLS12-381 pairing-friendly elliptic curve"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/wassasin/ibe"
keywords = ["ibe", "encryption", "ecc", "no_std"]
categories = ["cryptography", "no-std"]

[dependencies]
rand = "0.7"
tiny-keccak = { version = "2.0", features = ["sha3"] }
arrayref = "0.3"
irmaseal-curve = "0.1"

[dependencies.subtle]
version = "2.3"
default-features = false

[dependencies.byteorder]
version = "1.3"
default-features = false

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "main"
harness = false

