[package]
name = "ibe"
version = "0.1.5"
description = "Identity Based Encryption schemes on the BLS12-381 pairing-friendly elliptic curve"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>", "Leon Botros <l.botros@cs.ru.nl>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/wassasin/ibe"
keywords = ["ibe", "encryption", "ecc", "no_std"]
categories = ["cryptography", "no-std"]

[dependencies]
rand = "0.8.4"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
arrayref = "0.3.6"
irmaseal-curve = { git = "https://github.com/encryption4all/irmaseal-curve.git" }
group = "0.10.0"

[dependencies.subtle]
version = "2.4.1"
default-features = false

[dependencies.byteorder]
version = "1.3"
default-features = false

[dev-dependencies]
criterion = "0.3.5"

[lib]
bench = false

[[bench]]
name = "main"
harness = false
